--- a/ML_10_29_25.ipynb
+++ b/ML_10_29_25.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjLtihcmLJSUHanMr++sTJ",
+      "authorship_tag": "ABX9TyP1gtYFEmLnKMq41D9G0Mau",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -180,12 +180,45 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def average(nums):\n",
+        "  # nums should be an array\n",
+        "  sum = 0\n",
+        "  for num in nums:\n",
+        "    sum += num\n",
+        "  return sum / len(nums)\n"
+      ],
       "metadata": {
         "id": "nJhWDmp1bN2v"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "average([9,1,2,4,1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zqOu97TqSI3M",
+        "outputId": "c0dbdfb8-b5d8-4925-f66f-12ad7d80094b"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     }
   ]
 }
