--- a/ML_10_29_25.ipynb
+++ b/ML_10_29_25.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1gtYFEmLnKMq41D9G0Mau",
+      "authorship_tag": "ABX9TyOd/ZhHcLmTHNre9YRhBPqZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,12 +34,12 @@
       "metadata": {
         "id": "m0uHuhiPaxsC"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "vB-p5hh_oqM4"
       },
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "VLpZ9M1Ra1QA"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "a2JPN8cLbAXw"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -78,7 +78,7 @@
       "metadata": {
         "id": "OY6q9iLVbEkH"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "bbnFKR1QckPJ"
       },
-      "execution_count": 36,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -112,9 +112,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_IK-2t5ycztK",
-        "outputId": "22c1b797-829c-4f60-e726-bdb1704df591"
+        "outputId": "8da99677-41eb-4fd6-b7a4-d058612e4364"
       },
-      "execution_count": 43,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WHZtWyZyaJ8f",
-        "outputId": "44466146-c9d2-400f-eefe-4679743ddcbb"
+        "outputId": "28469ced-4ce5-495f-bb25-fcdd2cdf3221"
       },
-      "execution_count": 17,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,8 @@
             "c          complex    (2+4j)\n",
             "d          str        Necmi\n",
             "e          float      4.5\n",
-            "names      list       n=11\n",
+            "name       str        ÖMER\n",
+            "names      list       n=12\n",
             "x          int        3\n"
           ]
         }
@@ -165,9 +166,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2lgTEpZFbJHo",
-        "outputId": "4d252b45-dac1-4c56-c471-6215b0e62f10"
+        "outputId": "24782b74-1cd4-426e-b0df-58977354123c"
       },
-      "execution_count": 14,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +192,7 @@
       "metadata": {
         "id": "nJhWDmp1bN2v"
       },
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -204,9 +205,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zqOu97TqSI3M",
-        "outputId": "c0dbdfb8-b5d8-4925-f66f-12ad7d80094b"
+        "outputId": "2944e0dc-40b5-4d93-ba14-8147c1405085"
       },
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,7 +217,178 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import sys\n"
+      ],
+      "metadata": {
+        "id": "g4h-zjmtUNHe"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array = np.array([1,2,3,4])\n",
+        "for num in array:\n",
+        "  print(num)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n_t6qAS3UPJQ",
+        "outputId": "c628bc93-d9a8-4335-f274-248837a80bef"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = np.array([[1,2,3],[2,3,4]], dtype='int32')\n",
+        "for arr in b:\n",
+        "  for num in arr:\n",
+        "    if num%2==0:\n",
+        "      print(num)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OAlIeFoFYW0V",
+        "outputId": "7935b852-f036-4b9d-f8a8-f71730e7a58c"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "2\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f'Dimension: {b.ndim}, Shape: {b.shape}, Size: {b.size}, Type: {b.dtype}, Itemsize: {b.itemsize}, Number of bytes: {b.nbytes}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9ZQ1-6YEYvjO",
+        "outputId": "a83ccedc-8071-449f-c97d-8f94bce473ec"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dimension: 2, Shape: (2, 3), Size: 6, Type: int32, Itemsize: 4, Number of bytes: 24\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = np.array([[1,2,3,4,5,6],[7,8,9,10,11,12]])\n",
+        "c[0:1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vaLwfe7VwWfj",
+        "outputId": "1d8000e3-c58f-4284-f0f1-9f9d752fc4c4"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2, 3, 4, 5, 6]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c[0, :]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AAR20IF2xDSb",
+        "outputId": "8021244f-d1da-4ec8-8892-064f04817235"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4, 5, 6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c[:,2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sG1XjZN_xHRU",
+        "outputId": "c64aa10c-1f3e-4cbd-9225-d947cd025bac"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
         }
       ]
     }
