--- a/ML_10_29_25.ipynb
+++ b/ML_10_29_25.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOd/ZhHcLmTHNre9YRhBPqZ",
+      "authorship_tag": "ABX9TyNpyZ739G0PV7pVyxh5nHue",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -376,9 +376,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sG1XjZN_xHRU",
-        "outputId": "c64aa10c-1f3e-4cbd-9225-d947cd025bac"
+        "outputId": "2f7b3e95-3392-48e7-8afa-22ff72ed38d2"
       },
-      "execution_count": 36,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -388,7 +388,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c[1, 2:7:1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0CuyvuJOxgFb",
+        "outputId": "b146686a-1c2d-41f5-b75c-9b558730e667"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 9, 10, 11, 12])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
         }
       ]
     }
