--- a/ML_10_29_25.ipynb
+++ b/ML_10_29_25.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpyZ739G0PV7pVyxh5nHue",
+      "authorship_tag": "ABX9TyMKAuT1zgStRuUuyLCog8FM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -415,6 +415,127 @@
           },
           "metadata": {},
           "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c[1,3] = 19\n",
+        "c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N9GbppjuyBUE",
+        "outputId": "fa68e365-5799-470e-a732-95490385f04e"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  2,  3,  4,  5,  6],\n",
+              "       [ 7,  8,  9, 19, 11, 12]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c[:,3] = 32, 23\n",
+        "c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LzwNex7hyRU0",
+        "outputId": "f4127117-08a9-426f-ae2c-de6c78050f02"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  2,  3, 32,  5,  6],\n",
+              "       [ 7,  8,  9, 23, 11, 12]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = np.array([[1,2],[3,4],[5,6],[7,8],[9,10]])"
+      ],
+      "metadata": {
+        "id": "2buR6TDcykBk"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d[0:2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "haNxvolkysCE",
+        "outputId": "c4303346-4af6-4a4b-ce4b-2602883a1bc2"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2],\n",
+              "       [3, 4]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "e = d = np.array([[[1,2],[3,4]],[[5,6],[7,8]],[[9,10],[11,12]]])\n",
+        "e[:,1,0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bid8y_vnzFB0",
+        "outputId": "77db179e-dc6d-45b9-b745-33d4c5c64259"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 3,  7, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 90
         }
       ]
     }
