--- a/ML_10_29_25.ipynb
+++ b/ML_10_29_25.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKAuT1zgStRuUuyLCog8FM",
+      "authorship_tag": "ABX9TyPWZ5EHgZVVCkl/3PgFxS7N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,12 +34,12 @@
       "metadata": {
         "id": "m0uHuhiPaxsC"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "vB-p5hh_oqM4"
       },
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "VLpZ9M1Ra1QA"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "a2JPN8cLbAXw"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +78,7 @@
       "metadata": {
         "id": "OY6q9iLVbEkH"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "bbnFKR1QckPJ"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
         "id": "_IK-2t5ycztK",
         "outputId": "8da99677-41eb-4fd6-b7a4-d058612e4364"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +138,7 @@
         "id": "WHZtWyZyaJ8f",
         "outputId": "28469ced-4ce5-495f-bb25-fcdd2cdf3221"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +168,7 @@
         "id": "2lgTEpZFbJHo",
         "outputId": "24782b74-1cd4-426e-b0df-58977354123c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
       "metadata": {
         "id": "nJhWDmp1bN2v"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +207,7 @@
         "id": "zqOu97TqSI3M",
         "outputId": "2944e0dc-40b5-4d93-ba14-8147c1405085"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +230,7 @@
       "metadata": {
         "id": "g4h-zjmtUNHe"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -247,7 +247,7 @@
         "id": "n_t6qAS3UPJQ",
         "outputId": "c628bc93-d9a8-4335-f274-248837a80bef"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +277,7 @@
         "id": "OAlIeFoFYW0V",
         "outputId": "7935b852-f036-4b9d-f8a8-f71730e7a58c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +302,7 @@
         "id": "9ZQ1-6YEYvjO",
         "outputId": "a83ccedc-8071-449f-c97d-8f94bce473ec"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,7 +326,7 @@
         "id": "vaLwfe7VwWfj",
         "outputId": "1d8000e3-c58f-4284-f0f1-9f9d752fc4c4"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -352,7 +352,7 @@
         "id": "AAR20IF2xDSb",
         "outputId": "8021244f-d1da-4ec8-8892-064f04817235"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,7 +378,7 @@
         "id": "sG1XjZN_xHRU",
         "outputId": "2f7b3e95-3392-48e7-8afa-22ff72ed38d2"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,7 +404,7 @@
         "id": "0CuyvuJOxgFb",
         "outputId": "b146686a-1c2d-41f5-b75c-9b558730e667"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +431,7 @@
         "id": "N9GbppjuyBUE",
         "outputId": "fa68e365-5799-470e-a732-95490385f04e"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +459,7 @@
         "id": "LzwNex7hyRU0",
         "outputId": "f4127117-08a9-426f-ae2c-de6c78050f02"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -482,7 +482,7 @@
       "metadata": {
         "id": "2buR6TDcykBk"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -497,7 +497,7 @@
         "id": "haNxvolkysCE",
         "outputId": "c4303346-4af6-4a4b-ce4b-2602883a1bc2"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +525,7 @@
         "id": "bid8y_vnzFB0",
         "outputId": "77db179e-dc6d-45b9-b745-33d4c5c64259"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -536,6 +536,113 @@
           },
           "metadata": {},
           "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import seaborn as sns\n",
+        "import pandas"
+      ],
+      "metadata": {
+        "id": "QNq01shyklkl"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "titanic_data = sns.load_dataset(\"titanic\")\n",
+        "print(titanic_data.head())\n",
+        "print(titanic_data.info)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uslaOmifkqzs",
+        "outputId": "77d7cddd-36fe-4038-cc3f-9b73e1cd3b6f"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   survived  pclass     sex   age  sibsp  parch     fare embarked  class  \\\n",
+            "0         0       3    male  22.0      1      0   7.2500        S  Third   \n",
+            "1         1       1  female  38.0      1      0  71.2833        C  First   \n",
+            "2         1       3  female  26.0      0      0   7.9250        S  Third   \n",
+            "3         1       1  female  35.0      1      0  53.1000        S  First   \n",
+            "4         0       3    male  35.0      0      0   8.0500        S  Third   \n",
+            "\n",
+            "     who  adult_male deck  embark_town alive  alone  \n",
+            "0    man        True  NaN  Southampton    no  False  \n",
+            "1  woman       False    C    Cherbourg   yes  False  \n",
+            "2  woman       False  NaN  Southampton   yes   True  \n",
+            "3  woman       False    C  Southampton   yes  False  \n",
+            "4    man        True  NaN  Southampton    no   True  \n",
+            "<bound method DataFrame.info of      survived  pclass     sex   age  sibsp  parch     fare embarked   class  \\\n",
+            "0           0       3    male  22.0      1      0   7.2500        S   Third   \n",
+            "1           1       1  female  38.0      1      0  71.2833        C   First   \n",
+            "2           1       3  female  26.0      0      0   7.9250        S   Third   \n",
+            "3           1       1  female  35.0      1      0  53.1000        S   First   \n",
+            "4           0       3    male  35.0      0      0   8.0500        S   Third   \n",
+            "..        ...     ...     ...   ...    ...    ...      ...      ...     ...   \n",
+            "886         0       2    male  27.0      0      0  13.0000        S  Second   \n",
+            "887         1       1  female  19.0      0      0  30.0000        S   First   \n",
+            "888         0       3  female   NaN      1      2  23.4500        S   Third   \n",
+            "889         1       1    male  26.0      0      0  30.0000        C   First   \n",
+            "890         0       3    male  32.0      0      0   7.7500        Q   Third   \n",
+            "\n",
+            "       who  adult_male deck  embark_town alive  alone  \n",
+            "0      man        True  NaN  Southampton    no  False  \n",
+            "1    woman       False    C    Cherbourg   yes  False  \n",
+            "2    woman       False  NaN  Southampton   yes   True  \n",
+            "3    woman       False    C  Southampton   yes  False  \n",
+            "4      man        True  NaN  Southampton    no   True  \n",
+            "..     ...         ...  ...          ...   ...    ...  \n",
+            "886    man        True  NaN  Southampton    no   True  \n",
+            "887  woman       False    B  Southampton   yes   True  \n",
+            "888  woman       False  NaN  Southampton    no  False  \n",
+            "889    man        True    C    Cherbourg   yes   True  \n",
+            "890    man        True  NaN   Queenstown    no   True  \n",
+            "\n",
+            "[891 rows x 15 columns]>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(titanic_data.describe())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZIwZyoogk4wM",
+        "outputId": "88f97761-08ff-4dea-b8c6-b9f3335da8a5"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "         survived      pclass         age       sibsp       parch        fare\n",
+            "count  891.000000  891.000000  714.000000  891.000000  891.000000  891.000000\n",
+            "mean     0.383838    2.308642   29.699118    0.523008    0.381594   32.204208\n",
+            "std      0.486592    0.836071   14.526497    1.102743    0.806057   49.693429\n",
+            "min      0.000000    1.000000    0.420000    0.000000    0.000000    0.000000\n",
+            "25%      0.000000    2.000000   20.125000    0.000000    0.000000    7.910400\n",
+            "50%      0.000000    3.000000   28.000000    0.000000    0.000000   14.454200\n",
+            "75%      1.000000    3.000000   38.000000    1.000000    0.000000   31.000000\n",
+            "max      1.000000    3.000000   80.000000    8.000000    6.000000  512.329200\n"
+          ]
         }
       ]
     }
