--- a/ML_10_29_25.ipynb
+++ b/ML_10_29_25.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWZ5EHgZVVCkl/3PgFxS7N",
+      "authorship_tag": "ABX9TyPTdVaWmh/5+QppP/FMq3JP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -625,9 +625,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZIwZyoogk4wM",
-        "outputId": "88f97761-08ff-4dea-b8c6-b9f3335da8a5"
+        "outputId": "226f7567-2352-4ca8-c434-e36bae6ac748"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,6 +642,46 @@
             "50%      0.000000    3.000000   28.000000    0.000000    0.000000   14.454200\n",
             "75%      1.000000    3.000000   38.000000    1.000000    0.000000   31.000000\n",
             "max      1.000000    3.000000   80.000000    8.000000    6.000000  512.329200\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "missing_values = titanic_data.isnull().sum()\n",
+        "print(f'Missing Values in the Titanic Data:\\n{missing_values}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yeCnUO0El0Pd",
+        "outputId": "ec4f537f-1620-460d-c048-b56795a857b1"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Missing Values in the Titanic Data:\n",
+            "survived         0\n",
+            "pclass           0\n",
+            "sex              0\n",
+            "age            177\n",
+            "sibsp            0\n",
+            "parch            0\n",
+            "fare             0\n",
+            "embarked         2\n",
+            "class            0\n",
+            "who              0\n",
+            "adult_male       0\n",
+            "deck           688\n",
+            "embark_town      2\n",
+            "alive            0\n",
+            "alone            0\n",
+            "dtype: int64\n"
           ]
         }
       ]
