--- a/ML_10_29_25.ipynb
+++ b/ML_10_29_25.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTdVaWmh/5+QppP/FMq3JP",
+      "authorship_tag": "ABX9TyML3I2IzLbX8NPqRBGbq3De",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -136,22 +136,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WHZtWyZyaJ8f",
-        "outputId": "28469ced-4ce5-495f-bb25-fcdd2cdf3221"
+        "outputId": "706d07c0-e9d6-412b-f11d-818a2f6c5fb3"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Variable   Type       Data/Info\n",
-            "-------------------------------\n",
-            "c          complex    (2+4j)\n",
-            "d          str        Necmi\n",
-            "e          float      4.5\n",
-            "name       str        ÖMER\n",
-            "names      list       n=12\n",
-            "x          int        3\n"
+            "Interactive namespace is empty.\n"
           ]
         }
       ]
@@ -548,7 +541,7 @@
       "metadata": {
         "id": "QNq01shyklkl"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -563,9 +556,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uslaOmifkqzs",
-        "outputId": "77d7cddd-36fe-4038-cc3f-9b73e1cd3b6f"
+        "outputId": "7d77aa86-1963-4beb-95cb-75edcef5bb8d"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -625,7 +618,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZIwZyoogk4wM",
-        "outputId": "226f7567-2352-4ca8-c434-e36bae6ac748"
+        "outputId": "f859b9cd-484d-4995-9b57-efdd5bbbc5bb"
       },
       "execution_count": 6,
       "outputs": [
@@ -657,9 +650,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yeCnUO0El0Pd",
-        "outputId": "ec4f537f-1620-460d-c048-b56795a857b1"
+        "outputId": "f6f72002-5494-4cf5-9d9b-92551175dd95"
       },
-      "execution_count": 14,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,6 +676,149 @@
             "alone            0\n",
             "dtype: int64\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "titanic_data[\"age\"].fillna(titanic_data[\"age\"].median(), inplace=True)\n",
+        "titanic_data.isnull().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 676
+        },
+        "id": "gqwcAGGXqZC9",
+        "outputId": "e2450a40-2638-4a64-a5b5-c77c4a232a4a"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-1784930849.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+            "\n",
+            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+            "\n",
+            "\n",
+            "  titanic_data[\"age\"].fillna(titanic_data[\"age\"].median(), inplace=True)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "survived       0\n",
+              "pclass         0\n",
+              "sex            0\n",
+              "age            0\n",
+              "sibsp          0\n",
+              "parch          0\n",
+              "fare           0\n",
+              "embarked       2\n",
+              "class          0\n",
+              "who            0\n",
+              "adult_male     0\n",
+              "deck           0\n",
+              "embark_town    2\n",
+              "alive          0\n",
+              "alone          0\n",
+              "dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>survived</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>pclass</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sex</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>age</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sibsp</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>parch</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>fare</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>embarked</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>class</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>who</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>adult_male</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>deck</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>embark_town</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>alive</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>alone</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     }
