--- a/ML_10_29_25.ipynb
+++ b/ML_10_29_25.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyML3I2IzLbX8NPqRBGbq3De",
+      "authorship_tag": "ABX9TyPWeW982mrcUcqvODDFLfQn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -541,7 +541,7 @@
       "metadata": {
         "id": "QNq01shyklkl"
       },
-      "execution_count": 4,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -556,9 +556,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uslaOmifkqzs",
-        "outputId": "7d77aa86-1963-4beb-95cb-75edcef5bb8d"
+        "outputId": "b4c40e61-defa-49c3-93d4-f4ed3bde970b"
       },
-      "execution_count": 5,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -618,9 +618,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZIwZyoogk4wM",
-        "outputId": "f859b9cd-484d-4995-9b57-efdd5bbbc5bb"
+        "outputId": "2ca78a7c-d500-47e6-a529-2f72e086ef27"
       },
-      "execution_count": 6,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -650,9 +650,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yeCnUO0El0Pd",
-        "outputId": "f6f72002-5494-4cf5-9d9b-92551175dd95"
+        "outputId": "5c029c5d-de93-435a-965f-449e56b3d99e"
       },
-      "execution_count": 7,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,9 +691,9 @@
           "height": 676
         },
         "id": "gqwcAGGXqZC9",
-        "outputId": "e2450a40-2638-4a64-a5b5-c77c4a232a4a"
+        "outputId": "8690c180-2329-459d-a81f-9d3691e7904d"
       },
-      "execution_count": 14,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -712,21 +712,21 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "survived       0\n",
-              "pclass         0\n",
-              "sex            0\n",
-              "age            0\n",
-              "sibsp          0\n",
-              "parch          0\n",
-              "fare           0\n",
-              "embarked       2\n",
-              "class          0\n",
-              "who            0\n",
-              "adult_male     0\n",
-              "deck           0\n",
-              "embark_town    2\n",
-              "alive          0\n",
-              "alone          0\n",
+              "survived         0\n",
+              "pclass           0\n",
+              "sex              0\n",
+              "age              0\n",
+              "sibsp            0\n",
+              "parch            0\n",
+              "fare             0\n",
+              "embarked         2\n",
+              "class            0\n",
+              "who              0\n",
+              "adult_male       0\n",
+              "deck           688\n",
+              "embark_town      2\n",
+              "alive            0\n",
+              "alone            0\n",
               "dtype: int64"
             ],
             "text/html": [
@@ -798,7 +798,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>deck</th>\n",
-              "      <td>0</td>\n",
+              "      <td>688</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>embark_town</th>\n",
@@ -818,7 +818,132 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_titanic_data = titanic_data.drop(columns=\"embark_town\")\n",
+        "new_titanic_data.notnull().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 523
+        },
+        "id": "sWBjzNEnvQdu",
+        "outputId": "2a82c0bb-4a7c-4cc0-a24e-4c87393f7340"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "survived      891\n",
+              "pclass        891\n",
+              "sex           891\n",
+              "age           891\n",
+              "sibsp         891\n",
+              "parch         891\n",
+              "fare          891\n",
+              "embarked      889\n",
+              "class         891\n",
+              "who           891\n",
+              "adult_male    891\n",
+              "deck          203\n",
+              "alive         891\n",
+              "alone         891\n",
+              "dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>survived</th>\n",
+              "      <td>891</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>pclass</th>\n",
+              "      <td>891</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sex</th>\n",
+              "      <td>891</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>age</th>\n",
+              "      <td>891</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sibsp</th>\n",
+              "      <td>891</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>parch</th>\n",
+              "      <td>891</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>fare</th>\n",
+              "      <td>891</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>embarked</th>\n",
+              "      <td>889</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>class</th>\n",
+              "      <td>891</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>who</th>\n",
+              "      <td>891</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>adult_male</th>\n",
+              "      <td>891</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>deck</th>\n",
+              "      <td>203</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>alive</th>\n",
+              "      <td>891</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>alone</th>\n",
+              "      <td>891</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
         }
       ]
     }
